--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "cheerio": "^1.0.0-rc.3",
+    "colors": "^1.4.0",
     "puppeteer": "^5.5.0"
   },
   "scripts": {
